--- a/src/main/webapp/pages/status/status-incluir.xhtml
+++ b/src/main/webapp/pages/status/status-incluir.xhtml
@@ -15,13 +15,13 @@
 	        	<p:growl id="growl" life="4000" />
 				<p:panel id="panel" header="#{message['title.status.cadastro']}">	
 					<p:focus context="panel"/>		
-					<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
+					<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" title="#{message['label.title.status.nome']}"/>
 					<p:inputText id="nome" value="#{statusManager.status.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 					<br /><br />
-					<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
+					<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" title="#{message['label.title.status.dataInicio']}"/>
 					<p:calendar id="button" value="#{statusManager.status.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
 					<br /><br />
-					<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
+					<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" title="#{message['label.title.status.dataFim']}"/>
 					<p:calendar id="buttonFim" value="#{statusManager.status.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
 					<br /><br />
 					<p:commandButton value="#{message['button.salvar']}" action="#{statusManager.save()}" update="growl" styleClass="btn"/>				
