--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
@@ -11,7 +11,7 @@
 		    <p:menuitem value="#{message['pao.home']}" url="#" />
 		    <p:menuitem value="#{message['pao.perfilStefanini']}" outcome="pretty:perfilStefanini" disabled="true"/>
 		</p:breadCrumb>
-		<div class="panel-formulario">
+		<div class="perfil-stefanini panel-formulario">
 			<h2>#{message['title.perfilStefanini']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<br />
