--- a/src/main/webapp/pages/profissional/profissional-incluir.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-incluir.xhtml
@@ -68,9 +68,8 @@
 	                </p:selectOneMenu>
 	                <br /><br />
 	                <p:outputLabel for="status" value="#{message['label.profissional.status']}" styleClass="label" title="#{message['label.title.profissional.status']}"/>
-	                <p:selectOneMenu id="status" value="#{profissionalManager.profissional.status}"  required="true" requiredMessage="#{message['span.obrigatorio.status']}">
+	                <p:selectOneMenu id="status" value="#{profissionalManager.profissional.status}"  required="true" requiredMessage="#{message['span.obrigatorio.status']}" disabled="true">
 	                   <f:converter converterId="simpleEntityConverter"/>
-	                   <p:ajax event="change" listener="#{profissionalManager.mudaStatus()}" update="dataStatus"/>
 	                   <f:selectItem itemLabel="Ativo" itemValue="#{statusManager.valorDefault()}" />
 	                   <f:selectItems value="#{statusManager.listarAtivos()}" var="status" itemLabel="#{status.nome}" itemValue="#{status}" />	                    
 					</p:selectOneMenu>					
