Gabriel - ajustado campo deta de demissão de historico profissional

--- a/src/main/webapp/pages/profissional/profissional-historico.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-historico.xhtml
@@ -100,7 +100,7 @@
 					</p:column>
 
 					<p:column
-						headerText="#{message['label.profissional.dataAdmissao']}">
+						headerText="#{message['label.profissional.dataDemissao']}">
 						<h:outputText value="#{profissional.dataDemissao}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
