Tela de lista de relatorios

--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -7,10 +7,15 @@
     	<p class="subtitulo-pagina">Principais Funções</p>
     	<h:link outcome="pretty:profissional">
    	   		<div id="profissionais" class="painel">        	
-        		<div class="img-painel">
-        		</div>
         		<div class="text-painel">
         			Profissionais
+        		</div>       		
+        	</div> 
+        </h:link> 
+        <h:link outcome="pretty:relatoriosLinks">
+   	   		<div id="relatorios" class="painel">        	
+        		<div class="text-painel">
+        			Relatorios
         		</div>       		
         	</div> 
         </h:link>   	
