Tela de lista de relatorios

--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -13,7 +13,7 @@
         	</div> 
         </h:link> 
         <h:link outcome="pretty:relatoriosLinks">
-   	   		<div id="relatorios" class="painel">        	
+   	   		<div id="relatorios" class="painel relatorio">        	
         		<div class="text-painel">
         			Relatorios
         		</div>       		
