--- a/src/main/webapp/pages/profissional/profissional-historico.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-historico.xhtml
@@ -19,73 +19,78 @@
 			<h:form>
 				<p:dataTable id="gridProfissional" var="profissional"
 					value="#{profissionalManager.listaHistorico()}"
-					emptyMessage="#{message['alerta.listaVazia']}">
+					emptyMessage="#{message['alerta.listaVazia']}"
+					scrollable="true" scrollHeight="auto" scrollWidth="900"
+					frozenColumns="2"
+					frozenRows="0" >
 
-					<p:column headerText="#{message['label.profissional.matricula']} ">
-						<h:outputText value="#{profissional.matricula}" />
-					</p:column>
+					<div class="colunas-fixas">
+						<p:column headerText="#{message['label.profissional.matricula']} " styleClass="coluna-fixa">
+							<h:outputText value="#{profissional.matricula}" />
+						</p:column>
+	
+						<p:column headerText="#{message['label.nome']} " styleClass="coluna-fixa">
+							<h:outputText value="#{profissional.nome}" />
+						</p:column>
+					</div>
 
-					<p:column headerText="#{message['label.nome']} ">
-						<h:outputText value="#{profissional.nome}" />
-					</p:column>
-
-					<p:column headerText="#{message['label.profissional.celula']}">
+					<p:column headerText="#{message['label.profissional.celula']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.celula.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.equipe']}">
+					<p:column headerText="#{message['label.profissional.equipe']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.equipe.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.cargo']}">
+					<p:column headerText="#{message['label.profissional.cargo']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.cargo.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.perfil']}">
+					<p:column headerText="#{message['label.profissional.perfil']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.perfil.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.cargaHoraria']}">
+					<p:column headerText="#{message['label.cargaHoraria']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.cargaHoraria.cargaHoraria}">
 							<f:converter converterId="cargaHorariaConverter" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.contratacao']}">
+					<p:column headerText="#{message['label.profissional.contratacao']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.formaContratacao.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.status']}">
+					<p:column headerText="#{message['label.profissional.status']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.status.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.saida']}">
+					<p:column headerText="#{message['label.profissional.saida']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.dataSaida}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.retorno']}">
+					<p:column headerText="#{message['label.profissional.retorno']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.dataRetorno}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.salario']}">
+					<p:column headerText="#{message['label.profissional.salario']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.salario}">
 							<f:convertNumber minFractionDigits="2" type="currency"
 								currencySymbol="R$" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.beneficios']}">
+					<p:column headerText="#{message['label.profissional.beneficios']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.beneficios}">
 							<f:convertNumber minFractionDigits="2" type="currency"
 								currencySymbol="R$" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.valorHora']}">
+					<p:column headerText="#{message['label.profissional.valorHora']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.valorHora}">
 							<f:convertNumber minFractionDigits="2" type="currency"
 								currencySymbol="R$" />
@@ -93,26 +98,26 @@
 					</p:column>
 
 					<p:column
-						headerText="#{message['label.profissional.dataAdmissao']}">
+						headerText="#{message['label.profissional.dataAdmissao']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.dataAdmissao}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
 					<p:column
-						headerText="#{message['label.profissional.dataDemissao']}">
+						headerText="#{message['label.profissional.dataDemissao']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.dataDemissao}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.registro.inicio']}">
+					<p:column headerText="#{message['label.registro.inicio']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.registroValidadeInicio}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.registro.fim']}">
+					<p:column headerText="#{message['label.registro.fim']}" styleClass="coluna-movel">
 						<h:outputText value="#{profissional.registroValidaeFim}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
