Mateus - Refatorado relatórios, mostrando campos conforme o tipo do relatório

--- a/src/main/webapp/pages/relatorio/relatorio-profissional-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-profissional-equipe.xhtml
@@ -39,6 +39,10 @@
 			<p:column headerText="#{message['label.profissional.celula']}">	
 				<h:outputText value="#{profissional.celula.nome}"/>			
 			</p:column>	 
+			
+			<p:column headerText="#{message['label.profissional.equipe']}">	
+				<h:outputText value="#{profissional.equipe.nome}"/>			
+			</p:column>	
 				 
 			<p:column headerText="#{message['label.profissional.cargo']}">
 				<h:outputText value="#{profissional.cargo.nome}"/>			
