Ajustes Profisional Historico

--- a/src/main/webapp/pages/profissional/profissional-historico.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-historico.xhtml
@@ -20,7 +20,7 @@
 				<p:dataTable id="gridProfissional" var="profissional"
 					value="#{profissionalManager.listaHistorico()}"
 					emptyMessage="#{message['alerta.listaVazia']}"
-					scrollable="true" scrollHeight="auto" scrollWidth="900"
+					scrollable="true" scrollHeight="auto" scrollWidth="34%"
 					frozenColumns="2"
 					frozenRows="0" >
 
