--- a/src/main/webapp/pages/celula/celula-listar.xhtml
+++ b/src/main/webapp/pages/celula/celula-listar.xhtml
@@ -20,7 +20,9 @@
 			<p:button id="historico" styleClass="btn-default" icon="ui-icon-script" outcome="pretty:celula-historico" />
 			  <p:tooltip id="alt-historicoo" for="historico" value="#{message['label.historico']}" styleClass="alt"/>
 			<br />
-				<p:dataTable id="gridCelula" var="celula" value="#{celulaManager.lista}" emptyMessage="#{message['alerta.listaVazia']}" >
+				<p:dataTable id="gridCelula" var="celula" value="#{celulaManager.lista}" emptyMessage="#{message['alerta.listaVazia']}" 
+					 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+	                 paginator="true" rows="10" rowsPerPageTemplate="10,20,30">
 					
 					<p:column headerText="#{message['label.nome']}">
 						<h:outputText value="#{celula.nome}" />
