--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -20,7 +20,9 @@
 			<p:button id="historico" styleClass="btn-default" icon="ui-icon-script" outcome="pretty:equipe-historico" />
 			  <p:tooltip id="alt-historicoo" for="historico" value="#{message['label.historico']}" styleClass="alt"/>
 			<br />
-				<p:dataTable id="gridEquipes" var="equipe" value="#{equipeManager.lista}" emptyMessage="#{message['alerta.listaVazia']}">
+				<p:dataTable id="gridEquipes" var="equipe" value="#{equipeManager.lista}" emptyMessage="#{message['alerta.listaVazia']}"
+					 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+	                 paginator="true" rows="10" rowsPerPageTemplate="10,20,30">
 					<p:column headerText="#{message['label.nome']}">
 						<h:outputText value="#{equipe.nome}" />
 					</p:column>
