--- a/src/main/webapp/pages/profissional/profissional-historico.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-historico.xhtml
@@ -5,7 +5,8 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/pages/template/default.xhtml"
 	xmlns:pretty="http://ocpsoft.com/prettyfaces"
-	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+                xmlns:pe="http://primefaces.org/ui/extensions">
 
 	<ui:define name="content">
 		<div class="historico">
@@ -21,8 +22,25 @@
 					value="#{profissionalManager.listaHistorico()}"
 					emptyMessage="#{message['alerta.listaVazia']}"
 					
-					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+					paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {Exporters}"
 	                paginator="true" rows="10" rowsPerPageTemplate="10,20,30" >
+
+				<f:facet name="{Exporters}">
+		            <h:commandLink>
+		                <h:graphicImage value="/resources/img/excel.png" width="24"/>
+		                <p:dataExporter type="xls" target="gridProfissional" fileName="profissionais" />
+		            </h:commandLink>
+		            
+		            <h:commandLink>
+		                <p:graphicImage value="/resources/img/pdf.png" width="24"/>
+		                <pe:exporter type="pdf" encoding="iso-8859-1" target="gridProfissional" fileName="profissionais" cellFontSize="7" facetFontSize="7" facetFontStyle="BOLD" datasetPadding="2"/> 
+		            </h:commandLink>
+		 
+		            <h:commandLink>
+		                <p:graphicImage value="/resources/img/csv.png" width="24"/>
+		                <p:dataExporter type="csv" encoding="iso-8859-1" target="gridProfissional" fileName="profissionais" />
+		            </h:commandLink>
+            	</f:facet>
 
 					<div class="colunas-fixas">
 						<p:column headerText="#{message['label.profissional.matricula']} " styleClass="coluna-fixa">
