Gabriel - adicionando check de celulas nos relatorios

--- a/src/main/webapp/pages/relatorio/relatorio-contratacao-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-contratacao-equipe.xhtml
@@ -7,7 +7,7 @@
 	xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
 	<ui:define name="content">
-	<h:form>
+	<h:form id="grid">
 	<p:growl id="growl" life="4000" />
 		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
@@ -16,7 +16,19 @@
 		</p:breadCrumb>
 		<h2>#{message['title.relatorio.forma.contratacao']}</h2>
 		
-		<p:chart type="bar" model="#{relatorioManager.contratacaoPorEquipe}" style="height:300px" responsive="true">
+		<p:selectOneMenu styleClass="dropdown-pesquisa" id="celula"
+						value="#{relatorioManager.celula}"
+						converter="simpleEntityConverter">
+						<f:selectItem itemLabel="#{message['select.celula']}"
+							noSelectionOption="true" />
+						<f:selectItems value="#{celulaManager.listarAtivos()}"
+							var="celula" itemLabel="#{celula.nome}" itemValue="#{celula}" />
+							<p:ajax update="grid:gridGrafico"/> 
+							<p:ajax immediate="true" update="grid:gridGrafico" event="itemSelect" listener="#{relatorioManager.criaGrafico()}"/> 
+							
+							</p:selectOneMenu>
+							
+		<p:chart id="gridGrafico" type="bar" model="#{relatorioManager.contratacaoPorEquipe}" style="height:300px" responsive="true">
 			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectCltXestagioPorEquipe}" process="@this" update="gridRelatorio"/>
 		</p:chart>
 	</h:form>
