--- a/src/main/webapp/pages/relatorio/relatorio-contratacao-celula.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-contratacao-celula.xhtml
@@ -11,7 +11,8 @@
 	<p:growl id="growl" life="4000" />
 		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Relatorio" outcome="pretty:relatorio" disabled="true"/>
+		    <p:menuitem value="Relatorios" outcome="pretty:relatoriosLinks"/>
+		    <p:menuitem value="Relatorio Forma de Contratação por Celula" outcome="pretty:relatoriosLinks" disabled="true"/>
 		</p:breadCrumb>
 		<h2>#{message['title.relatorio.forma.contratacao.celula']}</h2>
 		
