--- a/src/main/webapp/pages/relatorio/relatorio-valor-celula.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-valor-celula.xhtml
@@ -15,6 +15,7 @@
 		    <p:menuitem value="Relatorio de Valor Hora Medio por Celula" outcome="pretty:relatoriosLinks" disabled="true"/>
 		</p:breadCrumb>
 		<h2>#{message['title.relatorio.valor.celula']}</h2>
+		
 			<p:selectOneMenu styleClass="dropdown-pesquisa" id="celula"
 						value="#{relatorioManager.celula}"
 						converter="simpleEntityConverter">
@@ -22,8 +23,8 @@
 							noSelectionOption="true" />
 						<f:selectItems value="#{celulaManager.listarAtivos()}"
 							var="celula" itemLabel="#{celula.nome}" itemValue="#{celula}" />
-							<p:ajax update="grid:gridGrafico"/> 
-							<p:ajax immediate="true" update="grid:gridGrafico" event="itemSelect" listener="#{relatorioManager.criaGrafico()}"/> 
+							<!--  <p:ajax update="grid:gridGrafico"/> -->
+							<p:ajax immediate="true" update="gridGrafico" event="itemSelect" listener="#{relatorioManager.criaGrafico()}"/> 
 							
 							</p:selectOneMenu>
 		<p:chart id="gridGrafico" type="bar" model="#{relatorioManager.valorPorCelula}" style="height:300px" responsive="true" extender="decimalConverter">
