--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -12,12 +12,21 @@
         		</div>       		
         	</div> 
         </h:link> 
+        
         <h:link outcome="pretty:relatoriosLinks">
    	   		<div id="relatorios" class="painel relatorio">        	
         		<div class="text-painel">
         			Relatorios
         		</div>       		
         	</div> 
-        </h:link>   	
+        </h:link>
+        
+        <!-- <h:link outcome="pretty:projeto">
+   	   		<div id="relatorios" class="painel relatorio">        	
+        		<div class="text-painel">
+        			Projetos
+        		</div>       		
+        	</div>
+        </h:link>-->   	
     </ui:define>
 </ui:composition>
