--- a/src/main/webapp/pages/projeto/projeto-listar.xhtml
+++ b/src/main/webapp/pages/projeto/projeto-listar.xhtml
@@ -17,7 +17,7 @@
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 
 			<p:button styleClass="btn-default" value="#{message['button.novo']}"
-				outcome="pretty:projeto-incluir" />
+				outcome="pretty:projeto" />
 
 			<h:form>
 				<p:dataTable id="gridProjeto" var="projeto"
