--- a/src/main/webapp/pages/profissional/profissional-historico.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-historico.xhtml
@@ -44,73 +44,71 @@
 		            </h:commandLink>
             	</f:facet>
 
-					<div class="colunas-fixas">
-						<p:column headerText="#{message['label.profissional.matricula']} " styleClass="coluna-fixa">
-							<h:outputText value="#{profissional.matricula}" />
-						</p:column>
-	
-						<p:column headerText="#{message['label.nome']} " styleClass="coluna-fixa">
-							<h:outputText value="#{profissional.nome}" />
-						</p:column>
-					</div>
+					<p:column headerText="#{message['label.profissional.matricula']} " styleClass="coluna-menor matricula">
+						<h:outputText value="#{profissional.matricula}" />
+					</p:column>
 
-					<p:column headerText="#{message['label.profissional.celula']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.nome']} " styleClass="coluna-maior">
+						<h:outputText value="#{profissional.nome}" />
+					</p:column>
+
+					<p:column headerText="#{message['label.profissional.celula']}" styleClass="coluna-menor celula">
 						<h:outputText value="#{profissional.celula.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.equipe']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.equipe']}" styleClass="coluna-maior equipe">
 						<h:outputText value="#{profissional.equipe.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.cargo']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.cargo']}" styleClass="coluna-maior">
 						<h:outputText value="#{profissional.cargo.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.perfil']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.perfil']}" styleClass="coluna-menor perfil">
 						<h:outputText value="#{profissional.perfil.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.cargaHoraria']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.cargaHoraria']}" styleClass="coluna-menor hora">
 						<h:outputText value="#{profissional.cargaHoraria.cargaHoraria}">
 							<f:converter converterId="cargaHorariaConverter" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.contratacao']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.contratacao']}" styleClass="coluna-menor contratacao">
 						<h:outputText value="#{profissional.formaContratacao.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.status']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.status']}" styleClass="coluna-menor status">
 						<h:outputText value="#{profissional.status.nome}" />
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.saida']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.saida']}" styleClass="coluna-menor hora">
 						<h:outputText value="#{profissional.dataSaida}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.retorno']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.retorno']}" styleClass="coluna-menor hora">
 						<h:outputText value="#{profissional.dataRetorno}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.salario']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.salario']}" styleClass="coluna-menor salario">
 						<h:outputText value="#{profissional.salario}">
 							<f:convertNumber minFractionDigits="2" type="currency"
 								currencySymbol="R$" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.beneficios']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.beneficios']}" styleClass="coluna-menor beneficio">
 						<h:outputText value="#{profissional.beneficios}">
 							<f:convertNumber minFractionDigits="2" type="currency"
 								currencySymbol="R$" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.profissional.valorHora']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.profissional.valorHora']}" styleClass="coluna-menor valor">
 						<h:outputText value="#{profissional.valorHora}">
 							<f:convertNumber minFractionDigits="2" type="currency"
 								currencySymbol="R$" />
@@ -118,26 +116,26 @@
 					</p:column>
 
 					<p:column
-						headerText="#{message['label.profissional.dataAdmissao']}" styleClass="coluna-movel">
+						headerText="#{message['label.profissional.dataAdmissao']}" styleClass="coluna-menor hora">
 						<h:outputText value="#{profissional.dataAdmissao}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
 					<p:column
-						headerText="#{message['label.profissional.dataDemissao']}" styleClass="coluna-movel">
+						headerText="#{message['label.profissional.dataDemissao']}" styleClass="coluna-menor hora">
 						<h:outputText value="#{profissional.dataDemissao}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.registro.inicio']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.registro.inicio']}" styleClass="coluna-menor hora">
 						<h:outputText value="#{profissional.registroValidadeInicio}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
 					</p:column>
 
-					<p:column headerText="#{message['label.registro.fim']}" styleClass="coluna-movel">
+					<p:column headerText="#{message['label.registro.fim']}" styleClass="coluna-menor hora">
 						<h:outputText value="#{profissional.registroValidaeFim}">
 							<f:convertDateTime pattern="dd/MM/yyyy" />
 						</h:outputText>
