--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -21,12 +21,12 @@
         	</div> 
         </h:link>
         
-        <!-- <h:link outcome="pretty:projeto">
+        <h:link outcome="pretty:projeto">
    	   		<div id="relatorios" class="painel relatorio">        	
         		<div class="text-painel">
         			Projetos
         		</div>       		
         	</div>
-        </h:link>-->   	
+        </h:link>   	
     </ui:define>
 </ui:composition>
