Gabriel - adicionado filtro por celula perfil, ajuste profissional equipe, filtro por celula em valor celula

--- a/src/main/webapp/pages/relatorio/relatorio-perfil-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-perfil-equipe.xhtml
@@ -16,18 +16,17 @@
 		</p:breadCrumb>
 		<h2>#{message['title.relatorio.perfil.equipe']}</h2>
 		
-		<p:selectOneMenu styleClass="dropdown-pesquisa" id="celula"
-						value="#{relatorioManager.celula}"
-						converter="simpleEntityConverter">
+			<p:selectOneMenu styleClass="dropdown-pesquisa" id="celula"
+						 value="#{relatorioManager.celula}" onchange="submit()" valueChangeListener="#{relatorioManager.stateChangeListenerPerfilPorEquipe}"
+						converter="simpleEntityConverter" >
 						<f:selectItem itemLabel="#{message['select.celula']}"
 							noSelectionOption="true" />
 						<f:selectItems value="#{celulaManager.listarAtivos()}"
 							var="celula" itemLabel="#{celula.nome}" itemValue="#{celula}" />
-							<p:ajax update="grid:gridGrafico"/> 
-							<p:ajax immediate="true" update="grid:gridGrafico" event="itemSelect" listener="#{relatorioManager.criaGrafico()}"/> 
 							
-							</p:selectOneMenu>
-		
+						  <p:ajax immediate="true" update="gridGrafico" event="change" process="@this"/>
+			</p:selectOneMenu>
+			
 		<p:chart id="gridGrafico" type="bar" model="#{relatorioManager.perfilPorEquipe}" style="height:300px" responsive="true">
 			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectPerfilPorEquipe}" process="@this" update="gridRelatorio"/>
 		</p:chart>
