--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -22,7 +22,7 @@
         </h:link>
         
         <h:link outcome="pretty:projeto">
-   	   		<div id="relatorios" class="painel relatorio">        	
+   	   		<div id="projeto" class="painel projeto">        	
         		<div class="text-painel">
         			Projetos
         		</div>       		
