Gabriel - ajustado filtro por celula em todos os relatorios exeto perfil por celula

--- a/src/main/webapp/pages/relatorio/relatorio-contratacao-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-contratacao-equipe.xhtml
@@ -32,7 +32,7 @@
 							</p:selectOneMenu>
 							
 		<p:chart id="gridGrafico" type="bar" model="#{relatorioManager.contratacaoPorEquipe}" style="height:300px" responsive="true">
-			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectCltXestagioPorEquipe}" process="@this" update="gridRelatorio"/>
+			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectCltXestagioPorEquipe}" process="@this" update="gridRelatorio celula"/>
 		</p:chart>
 	</h:form>
 		<br /><br />
