--- a/src/main/webapp/pages/relatorio/relatorio-profissional-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-profissional-equipe.xhtml
@@ -37,7 +37,7 @@
 		
 					
 		<p:chart id="gridGrafico"  type="bar" model="#{relatorioManager.profissionalPorEquipe}" style="height:300px" responsive="true">
-			<p:ajax  event="itemSelect"   listener="#{relatorioManager.itemSelectProfissionalPorEquipe}" process="@this" update="gridRelatorio"/>
+			<p:ajax  event="itemSelect"   listener="#{relatorioManager.itemSelectProfissionalPorEquipe}" process="@this" update="gridRelatorio celula"/>
 		</p:chart>
 	
 		<br /><br />
