--- a/src/main/webapp/pages/relatorio/relatorio-valor-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-valor-equipe.xhtml
@@ -30,7 +30,7 @@
 						
 		<p:chart id="gridGrafico" type="bar" model="#{relatorioManager.valorPorEquipe}" style="height:300px" responsive="true" extender="decimalConverter">
 			
-			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectValorPorEquipe}" process="@this" update="gridRelatorio"/>
+			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectValorPorEquipe}" process="@this" update="gridRelatorio celula"/>
 		</p:chart>
 	</h:form>
 		<br /><br />
